# ngyn

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  cog.toml  install.ps1  install.sh  release.sh  rustwrap.yaml
.cargo/: config.toml
.github/workflows/: build.yml  pr.yml  publish.yml  release.yml  version-bump.yml
apps/chip_search/: Cargo.toml
apps/chip_search/src/: main.rs
crates/: Cargo.toml  README.md
crates/cli/: CHANGELOG.md  Cargo.toml
crates/cli/src/: data.rs  lib.rs
crates/cli/src/templates/: controller.hbs  gate.hbs  middleware.hbs  mod.hbs  module.hbs  route.hbs  service.hbs
crates/core/: CHANGELOG.md  Cargo.toml
crates/core/src/: factory.rs  lib.rs
crates/core/src/app/: factory.rs  mod.rs  provider.rs
crates/core/src/server/: core.rs  engine.rs  mod.rs  server.rs  service.rs  tide.rs  vercel.rs
crates/hyper/: CHANGELOG.md  Cargo.toml
crates/hyper/src/: lib.rs  platform.rs
crates/macros/: CHANGELOG.md  Cargo.toml
crates/macros/src/: lib.rs
crates/macros/src/common/: check.rs  check_macro.rs  controller.rs  controller_macro.rs  handler.rs  http_code.rs  inject.rs  injectable.rs  injectable_macro.rs  mod.rs  route.rs  route_macro.rs  routes.rs  routes_macro.rs  service.rs  state.rs
crates/macros/src/core/: dto.rs  dto_macro.rs  interceptor_macro.rs  mod.rs  module.rs  module_macro.rs  param.rs  platform_macro.rs  query.rs
crates/macros/src/utils/: mod.rs  parse_macro_data.rs  str.rs  str_to_ident.rs
crates/macros/tests/: tests.rs
crates/macros/tests/common/: controller.expanded.rs  controller.rs  injectable.expanded.rs  injectable.rs  state.expanded.rs  state.rs
crates/macros/tests/core/: dto.expanded.rs  dto.rs  module.expanded.rs  module.rs  param.expanded.rs  param.rs
crates/redoc/: Cargo.toml
crates/redoc-macros/: Cargo.toml
crates/redoc-macros/src/: lib.rs
crates/redoc/src/: lib.rs  routing.rs
crates/redoc/src/templates/: redoc.html
crates/shared/: CHANGELOG.md  Cargo.toml
crates/shared/src/: lib.rs  traits.rs
crates/shared/src/core/: engine.rs  handler.rs  mod.rs  statics.rs
crates/shared/src/enums/: http_method_enum.rs  mod.rs  path_enum.rs
crates/shared/src/server/: body.rs  context.rs  mod.rs  request.rs  response.rs  transformer.rs  uri.rs
crates/shared/src/traits/: controller_trait.rs  gate_trait.rs  injectable_trait.rs  interpreter.rs  middleware_trait.rs  mod.rs  module_trait.rs
crates/shuttle/: CHANGELOG.md  Cargo.toml
crates/shuttle/src/: lib.rs
crates/swagger/: Cargo.toml
crates/swagger-macros/: Cargo.toml
crates/swagger-macros/src/: lib.rs
crates/swagger/src/: lib.rs  routing.rs
crates/swagger/src/templates/: swagger.html
crates/vercel/: CHANGELOG.md  Cargo.toml
crates/vercel/src/: lib.rs  platform.rs
crates/ws/: CHANGELOG.md  Cargo.toml
crates/ws/src/: lib.rs
examples/basic_app/: Cargo.toml  Dockerfile  docker-compose.yml
examples/basic_app/src/: main.rs
examples/basic_app/src/modules/: mod.rs
examples/basic_app/src/modules/sample/: sample_controller.rs  sample_module.rs  sample_repository.rs  sample_service.rs
examples/graphql_app/: Cargo.toml
examples/graphql_app/src/: main.rs
examples/sqlx_app/: Cargo.toml
examples/sqlx_app/src/: main.rs
examples/vercel_app/: Cargo.toml  vercel.json
examples/vercel_app/api/: [...all].rs  [[...all]].rs
examples/vercel_app/public/: index.html
examples/vercel_app/src/modules/sample/: mod.rs  sample_controller.rs  sample_module.rs  sample_repository.rs  sample_service.rs
examples/weather_app/: .env.sample  Cargo.toml  README.md
examples/weather_app/src/: main.rs  shared.rs  weather.rs
examples/weather_app/src/middlewares/: mod.rs  notfound_middleware.rs  test_middleware.rs
examples/weather_app/src/modules/: app_module.rs  mod.rs
examples/weather_app/src/modules/home/: home_controller.rs  home_module.rs  mod.rs
examples/weather_app/src/modules/weather/: mod.rs  weather_controller.rs  weather_gate.rs  weather_module.rs  weather_repository.rs  weather_service.rs
examples/weather_app/src/shared/: mod.rs
examples/websocket/: Cargo.toml
examples/websocket/src/: main.rs
rustle_cli/: Cargo.toml
rustle_core/: Cargo.toml
rustle_core/src/core/: interceptor.rs  module.rs
rustle_macros/src/: lib.rs
rustle_macros/src/core/: interceptor.rs  mod.rs  module.rs
scripts/: pre-bump.sh  version-bump.sh
sites/docs/: .prettierrc  book.toml  docusaurus.config.ts  eslint.config.mjs  package.json  sidebars.ts  tailwind.config.ts  tsconfig.json  types.d.ts  typography.ts  versions.json
sites/docs/docs/: intro.md
sites/docs/src/components/: Button.tsx  CodeWrap.tsx  Features.tsx  Feedback.tsx  Footer.tsx  GridPattern.tsx  Guides.tsx  Heading.tsx  HeroPattern.tsx  Navigation.tsx  Search.tsx  SectionProvider.tsx  Tag.tsx
sites/docs/src/components/HomepageFeatures/: index.tsx
sites/docs/src/css/: custom.css
sites/docs/src/pages/: index.tsx
sites/docs/src/theme/: SearchBar.tsx
sites/docs/src/theme/Layout/: index.tsx
sites/docs/src/theme/MDXComponents/: Heading.tsx
sites/docs/src/theme/NavbarItem/: DefaultNavbarItem.tsx
sites/docs/src/theme/SearchBar/: SearchBar.jsx
sites/docs/versioned_docs/version-0.4/: intro.md
sites/docs/versioned_docs/version-0.4/advanced/: _category_.json  dtos.md
sites/docs/versioned_docs/version-0.4/foundations/: _category_.json  controllers.md  gates.md  index.md  injectables.md  middlewares.md  modules.md
sites/docs/versioned_docs/version-0.4/providers/: _category_.json
sites/docs/versioned_docs/version-0.5.x/: basics.md  forms.md  gates.md  index.md  middlewares.md
sites/docs/versioned_sidebars/: version-0.4-sidebars.json  version-0.5.x-sidebars.json
starter-templates/with-basic/: Cargo.toml
starter-templates/with-basic/src/: main.rs
starter-templates/with-basic/src/routes/: echo_route.rs  mod.rs
starter-templates/with-ramhorns/: Cargo.toml
starter-templates/with-vercel/: Cargo.toml
starter-templates/with-vercel/api/: [[...all]].rs
starter-templates/with-vercel/public/: index.html
(+8 files in other folders)
