[package]
name = "rustle_cli"
version = "0.0.1"
edition = "2021"

#
# cargo binstall metadata:
#

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/rustle-x86_64-windows.zip"
bin-dir = "rustle-x86_64-windows/rustle.exe"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/rustle-x86_64-macos.tar.xz"
bin-dir = "rustle-x86_64-macos/rustle"
pkg-fmt = "txz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/rustle-aarch64-macos.tar.xz"
bin-dir = "rustle-x86_64-macos/rustle"
pkg-fmt = "txz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/rustle-x86_64-linux.tar.xz"
bin-dir = "rustle-x86_64-linux/rustle"
pkg-fmt = "txz"

# </cargo binstall>

[dependencies]

clap = { version = "4", features = ["cargo"], optional = true }
serde = "1"
serde_json = "1"
serde_derive = "1"
serde_yaml = "^0.9.0"
anyhow = "1"
console = "^0.15.0"
exitcode = "^1.1.2"
tracing = "^0.1.34"
tracing-tree = { version = "0.2.1" }
tracing-subscriber = { version = "^0.3.11", features = ["env-filter"] }


[features]
default = ["cli"]
# list optionals here:
cli = ["clap"]

[[bin]]
name = "rustle"
path = "src/bin/main.rs"

required-features = ["cli"]
