[package]
name = "ngyn"
version = "0.0.1"
edition = "2021"
description = "Modular backend framework for web applications"
license = "MIT"

[lib]
path = "src/lib.rs"

#
# cargo binstall metadata:
#

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/ngyn-x86_64-windows.zip"
bin-dir = "ngyn-x86_64-windows/ngyn.exe"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/ngyn-x86_64-macos.tar.xz"
bin-dir = "ngyn-x86_64-macos/ngyn"
pkg-fmt = "txz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/ngyn-aarch64-macos.tar.xz"
bin-dir = "ngyn-x86_64-macos/ngyn"
pkg-fmt = "txz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/ngyn-x86_64-linux.tar.xz"
bin-dir = "ngyn-x86_64-linux/ngyn"
pkg-fmt = "txz"

# </cargo binstall>

[dependencies]

clap = { version = "3.2.25", features = ["cargo"], optional = true }
serde = "1"
serde_json = "1"
serde_derive = "1"
serde_yaml = "^0.9.0"
anyhow = "1"
console = "^0.15.0"
exitcode = "^1.1.2"
tracing = "^0.1.34"
tracing-tree = { version = "0.2.1" }
tracing-subscriber = { version = "^0.3.11", features = ["env-filter"] }


[features]
default = ["cli"]
# list optionals here:
cli = ["clap"]

[[bin]]
name = "ngyn"
path = "src/bin/main.rs"

required-features = ["cli"]
