[package]
name = "cargo-ngyn"
version = "0.0.1"
edition = "2021"
description = "Modular backend framework for web applications"
license = "MIT"
documentation = "https://ngyn.rs/docs"
repository = "https://github.com/ngyn-rs/ngyn"
homepage = "https://ngyn.rs"
rust-version = "1.75"

[lib]
path = "src/lib.rs"

#
# cargo binstall metadata:
#

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/ngyn-x86_64-windows.zip"
bin-dir = "ngyn-x86_64-windows/ngyn.exe"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/ngyn-x86_64-macos.tar.xz"
bin-dir = "ngyn-x86_64-macos/ngyn"
pkg-fmt = "txz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/ngyn-aarch64-macos.tar.xz"
bin-dir = "ngyn-x86_64-macos/ngyn"
pkg-fmt = "txz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/ngyn-x86_64-linux.tar.xz"
bin-dir = "ngyn-x86_64-linux/ngyn"
pkg-fmt = "txz"

# </cargo binstall>

[dependencies]

clap = { version = "4.5", features = ["cargo"], optional = true }
convert_case = "0.6"
dialoguer = "0.10"
serde = "1.0"
anyhow = "1"
console = "^0.15.0"
ramhorns = "1"
exitcode = "^1.1.2"
tracing = "^0.1.34"
tracing-tree = { version = "0.2.1" }
tracing-subscriber = { version = "0.3.1", features = ["env-filter"] }


[features]
default = ["cli"]
# list optionals here:
cli = ["clap"]

[[bin]]
name = "ngyn"
path = "src/bin/main.rs"

required-features = ["cli"]
