[package]
name = "ngyn"
version = "0.4.4"
edition = "2021"
description = "Modular backend framework for web applications"
license = "MIT"
rust-version = "1.75"
documentation = "https://ngyn.rs/docs"
repository = "https://github.com/ngyn-rs/ngyn"
homepage = "https://ngyn.rs"

[lib]
path = "src/lib.rs"

[dependencies]
async-std = { version = "1.6", features = ["attributes"] }
async-trait = "0.1"
http = "1"
ngyn_macros = { version = "0.4", path = "../macros" }
ngyn_shared = { version = "0.4", path = "../shared" }
ngyn-hyper = { version = "0.1", path = "../hyper" }
