[package]
name = "ngyn-hyper"
version = "0.1.0"
edition = "2021"
description = "Hyper Platform for ngyn web framework"
license = "MIT"

[dependencies]
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
ngyn_shared = { version = "^0.4.0", path = "../shared" }
tokio = { version = "1", features = ["full"] }
