[package]
name = "ngyn-hyper"
version = "0.1.0"
edition = "2021"
description = "Hyper Platform for ngyn web framework"
license = "MIT"
documentation = "https://ngyn.rs/docs"
repository = "https://github.com/ngyn-rs/ngyn"
homepage = "https://ngyn.rs"
rust-version = "1.75"

[dependencies]
http-body-util = { workspace = true }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
ngyn_shared = { version = "^0.4.0", path = "../shared" }
tokio = { version = "1", features = ["full"] }
