[package]
name = "ngyn_macros"
version = "0.4.3"
edition = "2021"
description = "Modular backend framework for web applications"
license = "MIT"
rust-version = "1.75"

[dependencies]
http = "1.1"
syn = "2.0"
quote = "1.0"
ngyn_shared = { version = "0.4", path = "../shared" }

[lib]
path = "src/lib.rs"
proc-macro = true
