[package]
name = "ngyn_macros"
version = "0.5.1"
edition = "2021"
description = "Modular backend framework for web applications"
license = "MIT"
documentation = "https://ngyn.rs/docs"
repository = "https://github.com/ngyn-rs/ngyn"
homepage = "https://ngyn.rs"
rust-version = "1.75"

[dependencies]
http = { workspace = true }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
ngyn_shared = { version = "0.5", path = "../shared" }

[dev-dependencies]
macrotest = "1"

[lib]
path = "src/lib.rs"
proc-macro = true
