[package]
name = "ngyn-redoc-macros"
version = "0.1.0"
edition = "2021"
description = "Shuttle Runtime Platform for ngyn web framework"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ngyn-hyper = { version = "^0.1.0", path = "../../crates/hyper" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
path = "src/lib.rs"
proc-macro = true