[package]
name = "ngyn_shared"
version = "0.4.4"
edition = "2021"
description = "Modular backend framework for web applications"
license = "MIT"
documentation = "https://ngyn.rs/docs"
repository = "https://github.com/ngyn-rs/ngyn"
homepage = "https://ngyn.rs"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bytes = "1.2"
http-body-util = "0.1"
http = "1"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
