[package]
name = "ngyn_shared"
version = "0.4.5"
edition = "2021"
description = "Modular backend framework for web applications"
license = "MIT"
documentation = "https://ngyn.rs/docs"
repository = "https://github.com/ngyn-rs/ngyn"
homepage = "https://ngyn.rs"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
http-body-util = { workspace = true }
http = { workspace = true }
regex = "1.10"
serde = { workspace = true }
serde_json = { workspace = true }
url = "2.5.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
