[package]
name = "ngyn-shuttle"
version = "0.2.3"
edition = "2021"
description = "Shuttle Runtime Platform for ngyn web framework"
license = "MIT"
documentation = "https://ngyn.rs/docs"
repository = "https://github.com/ngyn-rs/ngyn"
homepage = "https://ngyn.rs"
rust-version = "1.81"
keywords = ["ngyn", "run-time", "platform", "shuttle", "framework"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ngyn-hyper = { version = "0.2.3", path = "../../crates/hyper" }
shuttle-runtime = "0"
