[package]
name = "ngyn-swagger-macros"
version = "0.1.0"
edition = "2021"
description = "Shuttle Runtime Platform for ngyn web framework"
license = "MIT"
documentation = "https://ngyn.rs/docs"
repository = "https://github.com/ngyn-rs/ngyn"
homepage = "https://ngyn.rs"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ngyn-hyper = { version = "0", path = "../../crates/hyper" }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full"] }

[lib]
path = "src/lib.rs"
proc-macro = true
