[package]
name = "ngyn-swagger"
version = "0.1.0"
edition = "2021"
description = "Shuttle Runtime Platform for ngyn web framework"
license = "MIT"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ngyn = { version = "0.4", path = "../core" }
ngyn-swagger-macros = { version = "0.1", path = "../swagger-macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
path = "src/lib.rs"
