[package]
name = "ngyn-vercel"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
ngyn_macros = { version = "0.3.1", path = "../macros" }
ngyn_shared = { version = "0.3.1", path = "../shared" }
tokio = { version = "1", features = ["full"] }
vercel_runtime = { version = "1.1.0" }
