[package]
name = "ngyn-vercel"
version = "0.1.0"
edition = "2021"
description = "Vercel Runtime Platform for ngyn web framework"
license = "MIT"
documentation = "https://ngyn.rs/docs"
repository = "https://github.com/ngyn-rs/ngyn"
homepage = "https://ngyn.rs"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ngyn_shared = { version = "^0.4.0", path = "../shared" }
tokio = { version = "1", features = ["full"] }
vercel_runtime = { version = "1.1.0" }
