[package]
name = "ngyn-vercel"
version = "0.2.0"
edition = "2021"
description = "Vercel Runtime Platform for ngyn web framework"
license = "MIT"
documentation = "https://ngyn.rs/docs"
repository = "https://github.com/ngyn-rs/ngyn"
homepage = "https://ngyn.rs"
rust-version = "1.75"
keywords = ["ngyn", "run-time", "platform", "vercel", "framework"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ngyn_shared = { version = "0.5", path = "../shared" }
tokio = { version = "1", features = ["full"] }
vercel_runtime = { version = "1.1.4" }
