[package]
name = "graphql"
version = "0.2.0"
edition = "2021"

[dependencies]
http-body-util = "0.1"
hyper = { version = "1.0", features = ["full"] }
juniper = { version = "0.16", features = ["expose-test-schema"] }
juniper_hyper = "0.9"
ngyn = { version = "^0.4.0", path = "../../crates/core" }
ngyn-hyper = { version = "^0.1.0", path = "../../crates/hyper" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
