[package]
name = "sqlx_app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "basic_app"
path = "src/main.rs"

[dependencies]
dotenv = "0.15.0"
ngyn = { version = "0.5.2", path = "../../crates/core" }
sqlx = { version = "0.7.0", features = [ "runtime-tokio", "postgres", "time"] }
tokio = { version = "1", features = ["full"] }
