[package]
name = "vercel_app"
version = "0.2.7"
edition = "2021"

[[bin]]
name = "all"
path = "api/[[...all]].rs"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nject = "0.3.0"
ngyn = { version = "0.2.7", features = ["vercel"] }
tokio = { version = "1.32.0", features = ["full"] }
vercel_runtime = { version = "1.1.0" }
