[package]
name = "vercel_app"
version = "0.2.8"
edition = "2021"

[[bin]]
name = "all"
path = "api/[[...all]].rs"

[lib]
path = "src/lib.rs"

[dependencies]
ngyn = { version = "0.3.1", path = "../../crates/core" }
ngyn_vercel = { version = "0.3.1", path = "../../crates/vercel" }
tokio = { version = "1.32.0", features = ["full"] }
vercel_runtime = { version = "1.1.1" }
