[package]
name = "weather_api"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
dotenv = "0.15.0"
nject = "0.3.0"
ngyn = { path = "../../crates/core", version = "0.2.4", features = ["core"] }
ureq = { version = "2.8.0" }
