[package]
name = "weather_api"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
dotenv = "0.15.0"
ngyn = { version = "0.3.1", path = "../../crates/core" }
ngyn_hyper = { version = "0.3.1", path = "../../crates/hyper" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shuttle-runtime = "0"
shuttle_ngyn = { version = "0.3.1", path = "../../crates/shuttle" }
ureq = { version = "2.8.0" }
validator = { version = "0.18.1", features = ["derive"] }
