[package]
name = "weather_api"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ngyn = { version = "0", path = "../../crates/core" }
ngyn-shuttle = { version = "0", path = "../../crates/shuttle" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shuttle-runtime = "0"
ureq = { version = "2.8.0" }
validator = { version = "0.18.1", features = ["derive"] }
